5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1577_1330.log
== TEST (2019-03-21 19:12:07) 
-- CODE:
print(round 250/6)
-- ERROR:
File "XXXX", line 1
    print(round 250/6)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:39) 
-- CODE:
print(round 41)
-- ERROR:
File "XXXX", line 1
    print(round 41)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:13:50) 
-- CODE:
print((round 41)
-- ERROR:
File "XXXX", line 1
    print((round 41)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:02) 
-- CODE:
print((round 41))
-- ERROR:
File "XXXX", line 1
    print((round 41))
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:20) 
-- CODE:
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:14:24) 
-- CODE:
print(41)
-- EXECUTION TIME:
0.228372
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:14:40) 
-- CODE:
print(41,6)
-- OUTPUT:
41 6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:14:41) 
-- CODE:
print(41,6)
-- EXECUTION TIME:
0.181696
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:15:13) 
-- CODE:
round(print41)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print41)
NameError: name 'print41' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:15:19) 
-- CODE:
round(print 41)
-- ERROR:
File "XXXX", line 1
    round(print 41)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:15:37) 
-- CODE:
round(print (41))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print (41))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:15:39) 
-- CODE:
round(print (41))
-- EXECUTION TIME:
0.176022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round(print (41))
TypeError: type NoneType doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:15:41) 
-- CODE:
round(print (41))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print (41))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:27) 
-- CODE:
round (41, 6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print (41))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:16:29) 
-- CODE:
round (41, 6)
-- EXECUTION TIME:
0.152362
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:30) 
-- CODE:
round (41, 6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print (41))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:45) 
-- CODE:
round (41, 6)
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:16:47) 
-- CODE:
round (41, 6)
print(41)
-- EXECUTION TIME:
0.164723
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:51) 
-- CODE:
round(41, 6)
print(41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:16:53) 
-- CODE:
round(41, 6)
print(41)
-- EXECUTION TIME:
0.186493
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:59) 
-- CODE:
round (41, 6)
print (41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:17:01) 
-- CODE:
round (41, 6)
print (41)
-- EXECUTION TIME:
0.194184
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:17:29) 
-- CODE:
round (41.6)
print (41)
-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:17:30) 
-- CODE:
round (41.6)
print (41)
-- EXECUTION TIME:
0.181256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:17:44) 
-- CODE:
print (41.6)

-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:17:45) 
-- CODE:
print (41.6)

-- EXECUTION TIME:
0.133165
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:18:42) 
-- CODE:
round (41, 10)

-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:18:44) 
-- CODE:
round (41, 10)

-- EXECUTION TIME:
0.220216
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:19:04) 
-- CODE:
round(41, 10)

-- OUTPUT:
41.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:19:06) 
-- CODE:
round(41, 10)

-- EXECUTION TIME:
0.174283
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:19:48) 
-- CODE:
round(print(41, 10))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(print(41, 10))
TypeError: type NoneType doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:19:59) 
-- CODE:
round(print(41, 10)

-- EXECUTION TIME:
0.173989
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 2
    
                       ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:20:07) 
-- CODE:
round(print41, 10)

-- EXECUTION TIME:
0.180853
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1330/main.py", line 1, in <module>
    round(print41, 10)
NameError: name 'print41' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:20:13) 
-- CODE:
round(print 41, 10)

-- EXECUTION TIME:
0.127559
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    round(print 41, 10)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:20:14) 
-- CODE:
round(print 41, 10)

-- EXECUTION TIME:
0.118535
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    round(print 41, 10)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:20:15) 
-- CODE:
round(print 41, 10)

-- ERROR:
File "XXXX", line 1
    round(print 41, 10)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:22:49) 
-- CODE:
print (41,666666)

-- EXECUTION TIME:
0.1743
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41 666666
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:23:20) 
-- CODE:
print(round(41, 6))

-- EXECUTION TIME:
0.190794
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:23:21) 
-- CODE:
print(round(41, 6))

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:23:23) 
-- CODE:
print(round(41, 6))

-- EXECUTION TIME:
0.139387
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:23:27) 
-- CODE:
print(round(41))

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:23:29) 
-- CODE:
print(round(41))

-- EXECUTION TIME:
0.152807
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:24:04) 
-- CODE:
print(round(41,6))

-- OUTPUT:
41
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:24:05) 
-- CODE:
print(round(41,6))

-- EXECUTION TIME:
0.149154
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:24:15) 
-- CODE:
print(round 41)

-- ERROR:
File "XXXX", line 1
    print(round 41)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:24:17) 
-- CODE:
print(round 41)

-- EXECUTION TIME:
0.196324
-- ERROR:
  File "/home/codebench/codes/1577/1330/main.py", line 1
    print(round 41)
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:25:02) 
-- CODE:
print (250/6)

-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:25:05) 
-- CODE:
print (250/6)

-- EXECUTION TIME:
0.153122
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:27:17) 
-- CODE:
print(round(250/6,2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 19:27:18) 
-- CODE:
print(round(250/6,2))

-- EXECUTION TIME:
0.230918
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:28:08) 
-- CODE:
print(     round(   250/6  ,2   ))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
